# Cosmic-Signature

./: .gitignore  .prettierrc.json  .solcover.js  .solhint.json  Cosmic-Signature-Contracts-Deployment-And-Registration.md  Cosmic-Signature-Game-Contract-Upgrade-And-Re-Registration.md  QUICKSTART.md  README.md  certora_instructions.md  compile_instructions.md  endurance.py  endurance.sol  eslint-1.bash  eslint.config.js  hardhat.config.js  init.json  jsconfig.json  mocha-hooks.js  package-lock.json  package.json  package.json-notes.txt  prettier-run.sh  run_certora_tests.py  simulation.py
Cosmic-Signature-Launch-Extravaganza/: participants.csv  shuffle.py
ImageGen/: .pre-commit-config.yaml  CLAUDE.md  COLORSPACE_UPGRADE_PLAN.md  Cargo.toml  CosmicSignature.py  PR-0-SUMMARY.md  PR-2-SUMMARY.md  PR-3-SUMMARY.md  PR-4-SUMMARY.md  PR-5-SUMMARY.md  RENDER_IMPROVEMENTS_PLAN.md  analyze_favorites.py  clippy.toml  planets.ipynb  run.py  rust-toolchain.toml  rustfmt.toml
ImageGen/.github/workflows/: ci.yml  test.yml
ImageGen/benches/: rendering_benchmark.rs
ImageGen/ci/: README.md  verify_reference.py
ImageGen/ci/reference/: generate_reference.sh
ImageGen/presets/: effect_regular_0004_b60831ab6677.json  orbit_regular_0004_b60831ab6677.json
ImageGen/proptest-regressions/: sim.txt
ImageGen/src/: analysis.rs  app.rs  cli.rs  config.rs  config_file.rs  drift.rs  drift_config.rs  error.rs  generation_log.rs  lib.rs  logging.rs  main.rs  oklab.rs  orbit_preset.rs  parameter_distributions.rs  presets.rs  profile.rs  render.rs  render_passes.rs  render_utils.rs  sim.rs  soa_positions.rs  spectral_constants.rs  spectrum.rs  spectrum_simd.rs  utils.rs  weighted_sampler.rs
ImageGen/src/curation/: mod.rs  novelty.rs  quality_score.rs  repair.rs  selector.rs  style_families.rs
ImageGen/src/optim/: borda.rs  effect_fusion.rs  gaussian_lut.rs  memory_pool.rs  mod.rs  simd.rs  sparse_spectrum.rs
ImageGen/src/post_effects/: aether.rs  ancient_manuscript.rs  atmospheric_depth.rs  aurora.rs  aurora_veils.rs  blackbody.rs  caustic_networks.rs  champleve.rs  cherenkov.rs  chromatic_bloom.rs  chromatic_dispersion.rs  color_grade.rs  cosmic_ink.rs  crepuscular_rays.rs  curvature_emboss.rs  deep_space.rs  dichroic_glass.rs  diffraction_spikes.rs  dimensional_glitch.rs  dodge_burn.rs  dog_bloom.rs  doppler_shift.rs  edge_luminance.rs  event_horizon.rs  exposure.rs  ferrofluid.rs  fine_texture.rs  flow_blur.rs  gaussian_bloom.rs  glow_enhancement.rs  gradient_map.rs  gravitational_lensing.rs  halation.rs  micro_contrast.rs  mod.rs  nebula.rs  nebula_clouds.rs  opalescence.rs  perceptual_blur.rs  prismatic_halos.rs  (+7 more)
ImageGen/src/render/: advanced_curation.rs  aesthetic_scoring.rs  artifact_budget.rs  auto_tune.rs  batch_drawing.rs  brightness_budget.rs  buffer_pool.rs  camera.rs  color.rs  color_space.rs  color_types.rs  composition.rs  composition_filter.rs  constants.rs  context.rs  cosmic_palette.rs  curation.rs  drawing.rs  effect_energy.rs  effect_randomizer.rs  effect_themes.rs  effects.rs  elegant_palettes.rs  elegant_pipeline.rs  enhanced_quality_metrics.rs  error.rs  film_grain.rs  gravitational_lensing.rs  hdr_pipeline.rs  histogram.rs  lensing_background.rs  lensing_renderer.rs  mod.rs  museum_mode.rs  parameter_descriptors.rs  pipeline.rs  point_renderer.rs  quality_metrics.rs  randomizable_config.rs  simd_tonemap.rs  (+6 more)
ImageGen/tests/: determinism_tests.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  integration_tests.rs  snapshot_tests.rs
ImageGen/tests/snapshots/: snapshot_tests__default_preset.snap  snapshot_tests__gallery_preset.snap  snapshot_tests__histogram_levels.snap  snapshot_tests__minimal_preset.snap  snapshot_tests__special_mode.snap
ImageGen3/: Cargo.toml  run.py
ImageGen3/src/: main.rs
abi/: BiddingWar.json  CharityWallet.json  CosmicDAO.json  CosmicGame.json  CosmicSignature.json  CosmicSignatureNFT.json  CosmicToken.json  OrbitalToken.json  Orbitals.json  RaffleWallet.json
certora/: AccessControl.conf  AccessControl.spec  BiddingMechanics.spec  BiddingMechanicsComplete.spec  CSTAccessControl.conf  CSTAccessControl.spec  CSTTokenSupply.conf  GameCore.conf  (+74 more)
(+948 files in other folders)
