[package]
name         = "three_body_problem"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.90.0"

[lib]
name = "three_body_problem"
path = "src/lib.rs"

[[bin]]
name = "three_body_problem"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[dependencies]
clap     = { version = "4.5.48", features = ["derive"] }
hex      = "0.4.3"
image    = "0.25.8"
nalgebra = "0.34.1"
palette  = "0.7.6"
rayon    = "1.11.0"
rustfft  = "6.4.1"
sha3     = "0.10.8"
statrs   = "0.18.0"
once_cell = "1.21.3"
smallvec = "1.15.1"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
incremental     = false