[package]
name         = "three_body_problem"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.86.0"

[lib]
name = "three_body_problem"
path = "src/lib.rs"

[[bin]]
name = "three_body_problem"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[dependencies]
clap     = { version = "4.5.37", features = ["derive"] }
hex      = "0.4.3"
image    = { version = "0.25.6", features = ["exr"] }
nalgebra = "0.33.2"
palette  = "0.7.6"
rayon    = "1.10.0"
rustfft  = "6.3.0"
sha3     = "0.10.8"
statrs   = "0.18.0"
once_cell = "1.19.0"
smallvec = "1.11.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Optimization dependencies
bumpalo = "3.14"        # Arena allocation for temporary buffers
arrayvec = "0.7"        # Fixed-capacity vectors for sparse spectral
parking_lot = "0.12"    # Faster mutexes for parallel processing
wide = "0.7"            # Portable SIMD for vectorized processing
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
incremental     = false
