[package]
name = "three_body_problem"
version = "1.0.0"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
nalgebra = "0.33.2"
rayon = "1.8.1"
sha3 = "0.10.8"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
image = "0.25.1"
imageproc = "0.25.0"
palette = "0.7.3"
rustfft = "6.1.0"
statrs = "0.16.0"
kiddo = "5.0.1"
chrono = "0.4.39"
line_drawing = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
