[package]
name = "three_body_problem"
version = "1.0.0"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
image = { version = "0.25.1", features = ["avif"] }
kiddo = "5.0.1"
line_drawing = "1.0"
nalgebra = "0.33.2"
num_cpus = "1.16"
palette = "0.7.3"
rayon = "1.8.1"
rustfft = "6.1.0"
sha3 = "0.10.8"
statrs = "0.16.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
